zokrates_cli/examples/compile_errors/generics/numerical_struct_generic.zok
struct A<1> {
    field[1] a;
}

def main() {
    return;
}
